# TreeSearch

./: .env.example  .gitignore  AGENT.md  CHANGELOG.md  CONTRIBUTING.md  README.md  README_ZH.md  pyproject.toml  requirements.txt
.github/workflows/: ubuntu.yml
docs/: api.md  architecture.md  refactor_plan.md  tree_search_experiments.md  tree_update.md
examples/: 01_basic_demo.py  02_index_and_search.py  03_cli_workflow.py  04_cli_workflow.py  04_multi_doc_search.py  05_directory_and_grep.py  05_multi_doc_search.py  07_tree_search_demo.py  README.md
examples/answer/: answer_demo.py
examples/benchmark/: README.md  benchmark.py  benchmark_utils.py  codesearchnet_benchmark.py  financebench_benchmark.py  metrics.py  qa_benchmark.py  qasper_benchmark.py
tests/: conftest.py  test_answer.py  test_benchmark.py  test_bm25.py  test_chunk.py  test_cli.py  test_config.py  test_embeddings.py  test_excel_parser.py  test_fts.py  test_index_stats.py  test_indexer.py  test_metrics.py  test_pathutil.py  test_query_decompose.py  test_ripgrep.py  test_search.py  test_tree.py
treesearch/: __init__.py  answer.py  benchmark.py  chunk.py  cli.py  config.py  embeddings.py  fts.py  indexer.py  llm.py  pathutil.py  query_decompose.py  rank_bm25.py  ripgrep.py  search.py  tree.py  tree_searcher.py  treesearch.py
treesearch/parsers/: __init__.py  ast_parser.py  doc_parser.py  docx_parser.py  excel_parser.py  html_parser.py  pdf_parser.py  registry.py
