[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytreesearch"
version = "0.6.1"
description = "Structure-aware document retrieval. FTS5/BM25 keyword matching over document trees."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "XuMing", email = "xuming624@qq.com"},
]
keywords = ["rag", "retrieval", "tree-search", "bm25", "fts5", "document-indexing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Indexing",
]
dependencies = []

[project.optional-dependencies]
jieba = ["jieba>=0.42"]
pdf = ["pageindex>=0.1"]
docx = ["python-docx>=0.8"]
html = ["beautifulsoup4>=4.12"]
fts5 = ["pysqlite3-binary>=0.5"]
treesitter = ["tree-sitter-languages>=1.10"]
gitignore = ["pathspec>=0.11"]
all = ["jieba>=0.42", "pageindex>=0.1", "python-docx>=0.8", "beautifulsoup4>=4.12", "tree-sitter-languages>=1.10", "pathspec>=0.11"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.urls]
Homepage = "https://github.com/shibing624/TreeSearch"
Repository = "https://github.com/shibing624/TreeSearch"
Issues = "https://github.com/shibing624/TreeSearch/issues"

[project.scripts]
treesearch = "treesearch.cli:main"

[tool.setuptools.packages.find]
include = ["treesearch*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
